--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script src="assets/js/jquery-2.1.3.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Load environment variables -->
+    <script src="assets/env.js"></script>
   </head>
   <body>
     <app-root></app-root>
